package Utils.Enums;

public enum EditTypes {
    EDIT_PASSWORD,
    EDIT_USER,
}
